@@ -53,10 +53,26 @@ __pan-os-php_scripts()
 
 
 		arguments=('type=' 'in=' 'out=' 'actions=' 'filter=' 'location=' 'loadpanoramapushedconfig' 'loadplugin=' 'help'  'listactions' 'listfilters' 'debugapi' 'apitimeout=' 'shadow-apikeynohidden' 'shadow-apikeynosave' 'shadow-disableoutputformatting' 'shadow-displaycurlrequest' 'shadow-enablexmlduplicatesdeletion' 'shadow-ignoreinvalidaddressobjects' 'shadow-json' 'shadow-recudexml' 'stats' 'template=')
-    type=('address' 'service' 'tag' 'schedule' 'application' 'threat' 'securityprofilegroup' 'rule'
-      'securityprofile' 'device' 'routing' 'zone' 'interface' 'virtualwire' 'stats' 'key-manager'
-      'address-merger' 'addressgroup-merger' 'service-merger' 'servicegroup-merger' 'tag-merger'
-      'override-finder' 'diff' 'upload' 'xml-issue'
+    type=(
+      "stats"
+      "address" "service" "tag" "schedule" "application" "threat"
+      "rule"
+      "device" "securityprofile" "securityprofilegroup"
+      "zone"  "interface" "virtualwire" "routing"
+      "key-manager"
+      "address-merger" "addressgroup-merger"
+      "service-merger" "servicegroup-merger"
+      "tag-merger"
+      "rule-merger"
+      "override-finder"
+      "diff"
+      "upload"
+      "xml-issue"
+      "appid-enabler"
+      "config-size"
+      "download-predefined"
+      "register-ip-mgr"
+      "userid-mgr"
     )
 
 		checkArray=('in' 'out' 'actions' 'filter' 'location')
